# DentalAnalyzer

./: Analyzer.cpp  Analyzer.h  CMakeLists.txt  README.md  Roughness.h  Roughness_Items.h  audiorecorder.ui  compare  compare.cpp  compareMain.cpp  extract_Vpropres.cpp  extract_Vpropres.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  objects.h  parameter.h  result.h  utility.cpp  utility.h  ~$ntalAnalyzer.docx
Polyhedron/: Polyhedron_OBJ_CGALImporter.h  Polyhedron_OFF_CGALImporter.h  polyhedron.h  polyhedron_enriched_polyhedron.h  polyhedron_shared_items.h
doc/: metric.md  tutorial.md
